[package]
name = "webserver_processes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
